<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SFIndieFest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="films">Films</string>
    <string name="schedule">Schedule</string>
    <string name="search">Search</string>
    <string name="comment">Comment</string>
    <string name="about">About</string>
    <string name="divider">Divider</string>
    <string name="comments">Comment Feed</string>
    <string name="about_sf_indiefest">About SF IndieFest</string>
    <string name="film_image">Film Image</string>
    <string name="film_title">Film Title</string>
    <string name="date_time_location">Date &amp; Time Location</string>
    <string name="film_synopsis">Film Synopsis</string>
    <string name="trailer">Trailer</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="title_activity_film_detail">Film Title</string>
    <string name="title_activity_film_trailer">Film Trailer</string>
    <string name="title_activity_buy_tickets">Buy Tickets</string>
    <string name="title_activity_search">Search</string>
    <string name="enter_actor_or_director_name">Enter Actor or Director Name</string>
    <string name="enter_comments_here">Enter comments here</string>
    <string name="about_sf_indiefest_">SF Indiefest is a year-round, 501c3 non-profit organization that has been operating since 1998. We present four annual festivals: the SF Independent Film Festival (SF Indie for short), the SF Documentary Festival (DocFest for short), the Santa Cruz Film Festival and Another Hole in the Head, our genre film festival. Last year over 21,000 film and event goers attended SF Indiefest events.</string>
    <string name="directions">Directions</string>
    <string name="title_activity_film_location">Film Location</string>
    <string name="share">Share</string>
    <string name="film_time">Film Time</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="theater_map">Theater Map</string>
    <string name="post_a_comment">Post a Comment</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="facebook_app_id">721624814589189</string>
    <string name="reminder_">"Reminder: "</string>
    <string name="this_app_uses_push_notifications_to_notify_you_of_upcoming_events">This app uses push notifications to notify you of upcoming events</string>

</resources>
