<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/layMenuItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<LinearLayout
                android:id="@+id/btnHome"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center_vertical"
                android:paddingTop="12dp" android:paddingBottom="12dp" android:paddingLeft="12dp">
		    <ImageView
		        android:layout_width="25dp"
		        android:layout_height="25dp"
		        android:layout_marginRight="5dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/home"
		        android:adjustViewBounds="true"
		        android:src="@drawable/home_50" />            		
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home" />
			</LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:contentDescription="@string/divider" />
            <LinearLayout
                android:id="@+id/btnFilms"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center_vertical"
                android:paddingTop="12dp" android:paddingBottom="12dp" android:paddingLeft="12dp">
		    <ImageView
		        android:layout_width="25dp"
		        android:layout_height="25dp"
		        android:layout_marginRight="5dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/films"
		        android:adjustViewBounds="true"
		        android:src="@drawable/movie_50" />            		
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/films" />
			</LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:contentDescription="@string/divider" />
			<LinearLayout
                android:id="@+id/btnSchedule"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center_vertical"
                android:paddingTop="12dp" android:paddingBottom="12dp" android:paddingLeft="12dp">
		    <ImageView
		        android:layout_width="25dp"
		        android:layout_height="25dp"
		        android:layout_marginRight="5dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/schedule"
		        android:adjustViewBounds="true"
		        android:src="@drawable/calendar_50" />   
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule" />
			</LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:contentDescription="@string/divider" />
			<LinearLayout
                android:id="@+id/btnSearch"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center_vertical"
                android:paddingTop="12dp" android:paddingBottom="12dp" android:paddingLeft="12dp">
		    <ImageView
		        android:layout_width="25dp"
		        android:layout_height="25dp"
		        android:layout_marginRight="5dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/search"
		        android:adjustViewBounds="true"
		        android:src="@drawable/search_50" />   
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search" />
			</LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:contentDescription="@string/divider" />
			<LinearLayout
                android:id="@+id/btnComments"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center_vertical"
                android:paddingTop="12dp" android:paddingBottom="12dp" android:paddingLeft="12dp">
		    <ImageView
		        android:layout_width="25dp"
		        android:layout_height="25dp"
		        android:layout_marginRight="5dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/comments"
		        android:adjustViewBounds="true"
		        android:src="@drawable/quote_50" />   
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments" />
			</LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:contentDescription="@string/divider" />
			<LinearLayout
                android:id="@+id/btnAbout"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center_vertical"
                android:paddingTop="12dp" android:paddingBottom="12dp" android:paddingLeft="12dp">
		    <ImageView
		        android:layout_width="25dp"
		        android:layout_height="25dp"
		        android:layout_marginRight="5dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/about_sf_indiefest"
		        android:adjustViewBounds="true"
		        android:src="@drawable/about_50" />   
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_sf_indiefest" />
			</LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:contentDescription="@string/divider" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>