<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollSynopsis"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txtSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_sf_indiefest_"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </ScrollView>
	    <ToggleButton
        android:id="@+id/togglePushNotifications"
        android:layout_below="@+id/scrollSynopsis"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/lblPush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollSynopsis"
        android:layout_toLeftOf="@+id/togglePushNotifications"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/this_app_uses_push_notifications_to_notify_you_of_upcoming_events"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	
    <TextView
        android:id="@+id/lblComingSoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblPush"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/coming_soon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgComingSoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblComingSoon"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/coming_soon"
        android:src="@drawable/coming_soon" />

</RelativeLayout>